{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 277,
  "lineage": "432062df-4b4b-59e9-09b8-49f7f28542e4",
  "resources": [
    {
      "module": "module.ec2-transit-gateway-private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:986006437548:instance/i-015b9ba9fee1a173a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015b9ba9fee1a173a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "transit-gateway-home-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06a66794c76abea83",
            "private_dns": "ip-192-168-4-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d3cbc67a0c8e660",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009b3d5aeb370f791",
            "tags": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "vpc_security_group_ids": [
              "sg-06957f73b084a5728"
            ]
          },
          "dependencies": [
            "module.sg-tgw-vpc-home.aws_security_group.security_group",
            "module.vpc-home.aws_subnet.private-subnets",
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-transit-gateway-public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:986006437548:instance/i-03d1dc857cfef0e95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d1dc857cfef0e95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "transit-gateway",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07dda014ebcafa1fe",
            "private_dns": "ip-10-11-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.5",
            "public_dns": "ec2-54-147-8-105.compute-1.amazonaws.com",
            "public_ip": "54.147.8.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0661b439e9f50662a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d25f0850ee13664f",
            "tags": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "deloittetgw.ca-dev-transit-gateway-1"
            },
            "vpc_security_group_ids": [
              "sg-04cb65bfecc71f58c"
            ]
          },
          "dependencies": [
            "module.sg-tgw.aws_security_group.security_group",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.sg-tgw",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:security-group/sg-04cb65bfecc71f58c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cb65bfecc71f58c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.2/32"
                ],
                "description": "Deloitte tgw",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TGW-sg",
            "name_prefix": "",
            "owner_id": "986006437548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TGW-sg"
            },
            "tags_all": {
              "Name": "TGW-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-043517093b07b6311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg-tgw-vpc-home",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:security-group/sg-06957f73b084a5728",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06957f73b084a5728",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.11.1.160/32"
                ],
                "description": "Deloitte TGW",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TGW-sg-vpc-home",
            "name_prefix": "",
            "owner_id": "986006437548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TGW-sg-vpc-home"
            },
            "tags_all": {
              "Name": "TGW-sg-vpc-home"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "aws_ec2_transit_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:986006437548:transit-gateway/tgw-00ce57327e6ef24e2",
            "association_default_route_table_id": "tgw-rtb-0400fb8dca5842806",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "dns_support": "enable",
            "id": "tgw-00ce57327e6ef24e2",
            "multicast_support": "disable",
            "owner_id": "986006437548",
            "propagation_default_route_table_id": "tgw-rtb-0400fb8dca5842806",
            "tags": {
              "Name": "deloittetgw.ca-transit-gateway"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-transit-gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit-gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "aws_ec2_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0b847600082210f56",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0765877e507679a64",
              "subnet-080225bb5767356a4"
            ],
            "tags": {
              "Name": "deloittetgw.ca-tgw-vpc-dev-attahments"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-tgw-vpc-dev-attahments"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-00ce57327e6ef24e2",
            "vpc_id": "vpc-043517093b07b6311",
            "vpc_owner_id": "986006437548"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.transit-gateway-vpc-home-attachment",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "aws_ec2_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-07e9409b31f074311",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-009b3d5aeb370f791",
              "subnet-030268e14a6ea5d44"
            ],
            "tags": {
              "Name": "deloittetgw.ca-tgw-vpc-home-attahments"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-tgw-vpc-home-attahments"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-00ce57327e6ef24e2",
            "vpc_id": "vpc-0c2c1af7ed3e398bc",
            "vpc_owner_id": "986006437548"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_subnet.private-subnets",
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3e2705c9a02bcea",
            "domain": "vpc",
            "id": "eipalloc-0f3e2705c9a02bcea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-75-101-159-67.compute-1.amazonaws.com",
            "public_ip": "75.101.159.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deloittetgw.ca-dev-eip-nat-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-eip-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:internet-gateway/igw-0c362010f88277db8",
            "id": "igw-0c362010f88277db8",
            "owner_id": "986006437548",
            "tags": {
              "Name": "deloittetgw.ca-dev-igw"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-igw"
            },
            "vpc_id": "vpc-043517093b07b6311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3e2705c9a02bcea",
            "connectivity_type": "public",
            "id": "nat-0a37680f7045e0c1f",
            "network_interface_id": "eni-089c86b4872399209",
            "private_ip": "10.11.1.224",
            "public_ip": "75.101.159.67",
            "subnet_id": "subnet-0d25f0850ee13664f",
            "tags": {
              "Name": "deloittetgw.ca-dev-nat-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-0a23e3b357adc2276",
            "id": "rtb-0a23e3b357adc2276",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a37680f7045e0c1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-dev-private-routes-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-private-routes-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-043517093b07b6311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-0e327ec1e73fbcbc3",
            "id": "rtb-0e327ec1e73fbcbc3",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a37680f7045e0c1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-dev-private-routes-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-private-routes-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-043517093b07b6311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-04ffd96068d2fb321",
            "id": "rtb-04ffd96068d2fb321",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c362010f88277db8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-dev-public-routes"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-public-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-043517093b07b6311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0960bb3a3ac7399fa",
            "route_table_id": "rtb-0a23e3b357adc2276",
            "subnet_id": "subnet-0765877e507679a64"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f4101acba37246",
            "route_table_id": "rtb-0e327ec1e73fbcbc3",
            "subnet_id": "subnet-080225bb5767356a4"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0145f4975c448ec88",
            "route_table_id": "rtb-04ffd96068d2fb321",
            "subnet_id": "subnet-0d25f0850ee13664f"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038a4119a86f33a55",
            "route_table_id": "rtb-04ffd96068d2fb321",
            "subnet_id": "subnet-0fc205eaa7dd41027"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-0765877e507679a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0765877e507679a64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-dev-private-subnets-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-private-subnets-1"
            },
            "vpc_id": "vpc-043517093b07b6311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-080225bb5767356a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080225bb5767356a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-dev-private-subnets-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-private-subnets-2"
            },
            "vpc_id": "vpc-043517093b07b6311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-0d25f0850ee13664f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d25f0850ee13664f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-dev-public-subnets-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-public-subnets-1"
            },
            "vpc_id": "vpc-043517093b07b6311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-0fc205eaa7dd41027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc205eaa7dd41027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-dev-public-subnets-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-dev-public-subnets-2"
            },
            "vpc_id": "vpc-043517093b07b6311"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:vpc/vpc-043517093b07b6311",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0a719acfd51d59bfc",
            "default_route_table_id": "rtb-054a368fd55523761",
            "default_security_group_id": "sg-07d3dbc2e25d9d4a8",
            "dhcp_options_id": "dopt-0a155753437c0351b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043517093b07b6311",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054a368fd55523761",
            "owner_id": "986006437548",
            "tags": {
              "Location": "Virginia",
              "Name": "deloittetgw.ca-dev-vpc",
              "Namespace": "deloittetgw.ca",
              "Stage": "dev"
            },
            "tags_all": {
              "Location": "Virginia",
              "Name": "deloittetgw.ca-dev-vpc",
              "Namespace": "deloittetgw.ca",
              "Stage": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e4fd2dbd2b26301",
            "domain": "vpc",
            "id": "eipalloc-01e4fd2dbd2b26301",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-24-235.compute-1.amazonaws.com",
            "public_ip": "34.198.24.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-eip-nat-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-eip-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:internet-gateway/igw-0aeda83bb5154ad76",
            "id": "igw-0aeda83bb5154ad76",
            "owner_id": "986006437548",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-igw"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-igw"
            },
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e4fd2dbd2b26301",
            "connectivity_type": "public",
            "id": "nat-0f178c8c9c781ed30",
            "network_interface_id": "eni-099c1d14e8c47a51d",
            "private_ip": "192.168.1.25",
            "public_ip": "34.198.24.235",
            "subnet_id": "subnet-0c92cb60b66d6c19d",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-nat-gateway-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc-home.aws_eip.eip-ngw",
            "module.vpc-home.aws_subnet.public-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-0897fbb1434fbfcae",
            "id": "rtb-0897fbb1434fbfcae",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f178c8c9c781ed30",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-home-dev-private-routes-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-private-routes-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_eip.eip-ngw",
            "module.vpc-home.aws_nat_gateway.ngw",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-0080e300486d4e5b0",
            "id": "rtb-0080e300486d4e5b0",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f178c8c9c781ed30",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-home-dev-private-routes-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-private-routes-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_eip.eip-ngw",
            "module.vpc-home.aws_nat_gateway.ngw",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:route-table/rtb-0e99a76688a388728",
            "id": "rtb-0e99a76688a388728",
            "owner_id": "986006437548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aeda83bb5154ad76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.11.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00ce57327e6ef24e2",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "deloittetgw.ca-home-dev-public-routes"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-public-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_internet_gateway.igw",
            "module.vpc-home.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4f81b2a55f33ce",
            "route_table_id": "rtb-0897fbb1434fbfcae",
            "subnet_id": "subnet-009b3d5aeb370f791"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_eip.eip-ngw",
            "module.vpc-home.aws_nat_gateway.ngw",
            "module.vpc-home.aws_route_table.private-routes",
            "module.vpc-home.aws_subnet.private-subnets",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f455f2183e1e70d7",
            "route_table_id": "rtb-0080e300486d4e5b0",
            "subnet_id": "subnet-030268e14a6ea5d44"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_eip.eip-ngw",
            "module.vpc-home.aws_nat_gateway.ngw",
            "module.vpc-home.aws_route_table.private-routes",
            "module.vpc-home.aws_subnet.private-subnets",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073431aae16366cd9",
            "route_table_id": "rtb-0e99a76688a388728",
            "subnet_id": "subnet-0c92cb60b66d6c19d"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_internet_gateway.igw",
            "module.vpc-home.aws_route_table.public-routes",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fadd03f0c455b67",
            "route_table_id": "rtb-0e99a76688a388728",
            "subnet_id": "subnet-040e814b9b35f4e87"
          },
          "dependencies": [
            "module.transit-gateway.aws_ec2_transit_gateway.aws_ec2_transit_gateway",
            "module.vpc-home.aws_internet_gateway.igw",
            "module.vpc-home.aws_route_table.public-routes",
            "module.vpc-home.aws_subnet.public-subnets",
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-009b3d5aeb370f791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009b3d5aeb370f791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-private-subnets-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-private-subnets-1"
            },
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-030268e14a6ea5d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030268e14a6ea5d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-private-subnets-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-private-subnets-2"
            },
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-0c92cb60b66d6c19d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c92cb60b66d6c19d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-public-subnets-1"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-public-subnets-1"
            },
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:subnet/subnet-040e814b9b35f4e87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e814b9b35f4e87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986006437548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "deloittetgw.ca-home-dev-public-subnets-2"
            },
            "tags_all": {
              "Name": "deloittetgw.ca-home-dev-public-subnets-2"
            },
            "vpc_id": "vpc-0c2c1af7ed3e398bc"
          },
          "dependencies": [
            "module.vpc-home.aws_vpc.vpc",
            "module.vpc-home.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-home",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986006437548:vpc/vpc-0c2c1af7ed3e398bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0bdcd1cdebac987ad",
            "default_route_table_id": "rtb-053dca6cc8ce2cfd5",
            "default_security_group_id": "sg-0b0df88d342919a8a",
            "dhcp_options_id": "dopt-0a155753437c0351b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2c1af7ed3e398bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053dca6cc8ce2cfd5",
            "owner_id": "986006437548",
            "tags": {
              "Location": "Virginia",
              "Name": "deloittetgw.ca-home-dev-vpc",
              "Namespace": "deloittetgw.ca-home",
              "Stage": "dev"
            },
            "tags_all": {
              "Location": "Virginia",
              "Name": "deloittetgw.ca-home-dev-vpc",
              "Namespace": "deloittetgw.ca-home",
              "Stage": "dev"
            }
          }
        }
      ]
    }
  ]
}